# vault-curator

./: .env.example  .gitignore  LOCAL_SETUP.example.md  README.md  config.example.toml  config.toml  handover-vault-curator.md  pyproject.toml
docs/: architecture.md  synthesis-admission-gate-plan.md  vault-health-check-plan.md
launchd/: com.nathan.vault-curator.plist  com.nathan.vault-curator.retry.plist  vault-curator.example.plist  vault-curator.retry.example.plist
scripts/: cleanup_history.py  daily-curate.sh  recover_reports.py  retry-pending.sh  sync-to-icloud.sh
src/vault_curator/: cli.py  context.py  drafting.py  evaluation_runner.py  evaluator.py  finalization.py  local_client.py  locking.py  parser.py  pipeline.py  preparation.py  qmd_retrieval.py  report.py  runtime.py  sonnet_catalog.py  sonnet_gate.py  state.py  synthesis_catalog.py  synthesis_doctor.py  synthesis_files.py  synthesis_gate.py
tests/: test_cli.py  test_context.py  test_evaluator.py  test_finalization.py  test_local_client.py  test_parser.py  test_qmd_retrieval.py  test_recovery_scripts.py  test_report.py  test_sonnet_catalog.py  test_sonnet_gate.py  test_state.py  test_synthesis_catalog.py  test_synthesis_doctor.py  test_synthesis_gate.py
